todas las pages acabadas

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!--Nuevos Productos-->
     <div class="nav-animated-bg">
         <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
-            <h2 class="text-2xl  text-red-600">New Products</h2>
+            <h2 class="text-2xl  text-emerald-300">New Products</h2>
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
@@ -289,7 +289,7 @@
     <!--Productos populares-->
     <div class="nav-animated-bg">
         <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
-            <h2 class="text-2xl text-red-600">Popular Products</h2>
+            <h2 class="text-2xl text-emerald-300">Popular Products</h2>
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
