--- a/src/pages/aboutHer.html
+++ b/src/pages/aboutHer.html
@@ -19,7 +19,6 @@
 
 <body>
     <!--Bar Nav-->
-
     <nav class="sticky top-0 z-50 bg-white border-gray-200  dark:border-gray-700 nav-animated-bg">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -27,7 +26,7 @@
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish Vibes</span>
             </a>
             <button data-collapse-toggle="navbar-dropdown" type="button"
-                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                class="inline-flex items-center  w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                 aria-controls="navbar-dropdown" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
                 <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -41,12 +40,12 @@
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-transparent md:dark:bg-transparent dark:border-gray-700">
                     <li>
                         <a href="/index.html"
-                            class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
+                            class="block  px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar"
-                            class="flex items-center justify-between w-full py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
+                            class="flex items-center justify-between w-full  px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">
                             Store
                             <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                                 fill="none" viewBox="0 0 10 6">
@@ -59,46 +58,45 @@
                             class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 nav-animated-bg dark:divide-white">
                             <div class="py-1">
                                 <a href="/src/pages/store.html"
-                                    class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">All
+                                    class="block px-4  text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">All
                                     Categories</a>
                             </div>
-                            <ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
-                                aria-labelledby="dropdownLargeButton">
+                            <ul class=" text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
                                 <li>
                                     <a href="/src/pages/store.html#normalVinyl"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Normal
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Normal
                                         Vinyl</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#limitedEditionVinyl"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Limited
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Limited
                                         Edition Vinyl</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#misteryBoxs"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mistery
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mistery
                                         Boxs(Only Holidays)</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#hoddies"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Hoodies</a>
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Hoodies</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#oversideTshirst"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Overside
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Overside
                                         T-shirts</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#necklaces"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Necklaces</a>
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Necklaces</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#shoes"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shoes</a>
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shoes</a>
                                 </li>
                                 <li>
                                     <a href="/src/pages/store.html#signedThings"
-                                        class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Signed
+                                        class="block px-4  hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Signed
                                         Things</a>
                                 </li>
                             </ul>
@@ -107,15 +105,15 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
+                            class="block  px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tour</a>
+                            class="block  px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tour</a>
                     </li>
                     <li>
                         <a href="/src/pages/aboutUs.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
+                            class="block  px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
                             Us</a>
                     </li>
                 </ul>
@@ -130,6 +128,122 @@
             </button>
         </div>
     </nav>
+    <!--Contenido-->
+    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4">Billie Eilish Story </h2>
+    <div class="max-w-screen-xl mx-auto p-4 py-6 lg:py-8">
+        <!--quien es ella-->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+            <img src="/src/assets/img/Billie-Eilish-Introduction.webp" alt="img de billie"
+                class="w-full h-auto rounded-lg">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4">Who's Her</h1>
+                <p class="text-base leading-relaxed text-white">Billie Eilish, nacida el 18 de diciembre de 2001 en Los
+                    Ángeles, es
+                    una cantante y compositora
+                    estadounidense reconocida mundialmente. Desde su debut con "Ocean Eyes" en 2015, ha destacado por su
+                    estilo único, letras introspectivas y colaboraciones con su hermano Finneas. En 2024, lanzó su
+                    tercer álbum de estudio, consolidando su evolución artística y abordando temas profundos. Además de
+                    su música, es una activa defensora del medio ambiente y los derechos de los animales. Con múltiples
+                    premios, incluidos Grammys y un Oscar, Eilish es un ícono de su generación y una figura influyente
+                    en la cultura contemporánea.</p>
+            </div>
+        </div>
+        <br><br>
+        <!--primer album ep-->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4">Don't Smile at Me</h1>
+                <p class="text-base leading-relaxed text-white">Es el primer EP de Billie Eilish, lanzado el 11 de
+                    agosto de 2017. Este trabajo marcó el inicio de su ascenso meteórico en la música, destacándose por
+                    su estilo único que combina letras oscuras, melodías melancólicas y una producción minimalista a
+                    cargo de su hermano, Finneas O'Connell. El EP incluye temas icónicos como "Ocean Eyes", que la
+                    catapultó a la fama, "Bellyache" y "idontwannabeyouanymore", mostrando su capacidad para transmitir
+                    emociones complejas con una voz cautivadora. Con este proyecto, Billie se consolidó como una de las
+                    artistas emergentes más prometedoras de su generación.</p>
+            </div>
+            <img src="/src/assets/img/imgOceanEyes.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+
+        </div>
+        <br><br>
+        <!--primer album de estudio-->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+            <img src="/src/assets/img/album1.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4">When We All Fall Asleep, Where Do We Go?</h1>
+                <p class="text-base leading-relaxed text-white">Es el primer álbum de estudio de Billie Eilish, lanzado
+                    el 29 de marzo de 2019. Este álbum revolucionó el pop contemporáneo con su enfoque experimental y su
+                    fusión de géneros como electropop, trap y baladas melancólicas. Producido íntegramente por Billie y
+                    su hermano Finneas, incluye éxitos como "Bad Guy", "Bury a Friend" y "When the Party's Over", que se
+                    convirtieron en himnos globales. Con letras introspectivas y sonidos innovadores, el álbum explora
+                    temas como la ansiedad, el sueño y las inseguridades, conectando profundamente con su audiencia. Fue
+                    un éxito comercial y crítico, ganando múltiples premios Grammy, incluido Álbum del Año, y
+                    posicionando a Billie como una figura clave en la música contemporánea.</p>
+            </div>
+        </div>
+        <br><br>
+        <!--segundo album de estudio-->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4">Happier Than Ever</h1>
+                <p class="text-base leading-relaxed text-white">Es el segundo álbum de estudio de Billie Eilish, lanzado
+                    el 30 de julio de 2021. Con un enfoque más maduro y emocional, el álbum muestra una evolución en su
+                    estilo musical, combinando pop, rock y baladas suaves con toques de jazz y bossa nova. La
+                    producción, nuevamente realizada por Billie y Finneas, explora temas de crecimiento personal,
+                    relaciones tóxicas y la lucha por encontrar la paz interior. Canciones como "Therefore I Am", "Your
+                    Power" y "Happier Than Ever" destacan por su profundidad lírica y su enfoque más orgánico en
+                    comparación con su trabajo anterior. El álbum fue aclamado por la crítica y recibió múltiples
+                    premios, incluyendo un Grammy, consolidando aún más a Billie como una de las artistas más
+                    innovadoras y versátiles de la música moderna.</p>
+            </div>
+            <img src="/src/assets/img/album2.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+
+        </div>
+        <br><br>
+        <!--tercer album de estudio-->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
+            <img src="/src/assets/img/album3.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4">Hit Me Hard And Soft</h1>
+                <p class="text-base leading-relaxed text-white">Es el tercer álbum de estudio de Billie Eilish, lanzado
+                    en 2024. Con este proyecto, Billie da un paso más hacia una madurez artística, explorando sonidos
+                    más complejos y oscuros mientras profundiza en temas como el amor, la vulnerabilidad y la lucha
+                    interna. El álbum mezcla géneros como el pop experimental, el indie y la electrónica, manteniendo la
+                    producción minimalista que la caracteriza, pero con una mayor riqueza instrumental y emocional.
+                    Canciones como "Numb", "Cold Hands" y "Wasted Youth" reflejan una evolución en su estilo, tanto
+                    lírico como sonoro. Con "Hit Me Hard and Soft", Billie Eilish reafirma su lugar como una de las
+                    artistas más influyentes de su generación, continuando su camino hacia la experimentación y la
+                    conexión profunda con sus seguidores.</p>
+            </div>
+        </div>
+        <!--despedida-->
+        <br><br>
+        <div class="grid grid-cols-1 md:grid-cols-1 gap-4 ">
+            <div class="w-full h-full flex flex-col justify-center">
+                <h1 class="text-2xl text-emerald-300 font-bold mb-4 text-center">! Congratulations ¡</h1>
+                <p class="text-base leading-relaxed text-white">¡Felicidades! Ahora has aprendido mucho más sobre Billie
+                    Eilish, su increíble carrera y su evolución como artista. Desde su debut con "Ocean Eyes" hasta su
+                    último álbum "Hit Me Hard and Soft", has descubierto cómo ha logrado cautivar al mundo con su música
+                    única y su estilo auténtico. ¡Ahora puedes seguir explorando Elish Vibes!</p>
+                <br>
+                <div class="mt-0 flex items-center justify-center gap-x-6 lg:justify-center">
+                    <a href="/index.html"
+                        class="rounded-md bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium text-sm px-3.5 py-2.5 text-white shadow-sm hover:bg-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
+                        Back to Home
+                    </a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-3 sm:grid-cols-1  gap-4 ">
+            <img src="/src/assets/img/despedida2.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+            <img src="/src/assets/img/despedida1.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+            <img src="/src/assets/img/despedida3.gif" alt="img de billie" class="w-full h-auto rounded-lg">
+
+        </div>
+    </div>
+
+
+
 
     <!--Footer-->
 
