--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -134,7 +134,8 @@
     <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4">Billie Eilish Store </h2>
     <div class="font-[sans-serif] nav-animated">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="normalVinyl" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
+            <h2 id="normalVinyl"
+                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Normal Vinyl</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -232,7 +233,7 @@
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="limitedEditionVinyl"
-                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Limited
+                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">Limited
                 Edition Vinyl</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -330,7 +331,8 @@
     <!--Mistery Box-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="misteryBoxs" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
+            <h2 id="misteryBoxs"
+                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Mistery Boxs</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 max-xl:gap-3 gap-6">
@@ -405,7 +407,8 @@
     </div>
     <!--hoddies-->
     <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
-        <h2 id="hoddies" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Hoddies
+        <h2 id="hoddies" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
+            Hoddies
         </h2>
 
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6">
@@ -570,7 +573,8 @@
     </div>
     <!--Overside t-shirts-->
     <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
-        <h2 id="oversideTshirst" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
+        <h2 id="oversideTshirst"
+            class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
             Overside T-shirts
         </h2>
 
@@ -736,7 +740,7 @@
     <!--necklaces-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="necklaces" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
+            <h2 id="necklaces" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Necklaces</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -833,7 +837,8 @@
     <!--Shoes-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="shoes" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Shoes
+            <h2 id="shoes" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
+                Shoes
             </h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -1022,7 +1027,8 @@
     <!--signed Things-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="signedThings" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
+            <h2 id="signedThings"
+                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-emerald-300 mb-6 sm:mb-10">
                 Signed Things</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 max-xl:gap-2 gap-6">
