--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -186,7 +186,7 @@
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
-                    <a href="/index.html" class="flex items-center">
+                    <a href="https://flowbite.com/" class="flex items-center">
                         <img src="/src/assets/img/logoBarra.svg" class="h-8 me-3" alt="Billie Logo" />
                         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish
                             Vibes</span>
