--- a/src/pages/tour.html
+++ b/src/pages/tour.html
@@ -162,10 +162,9 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/473d6e1a-6ceb-4973-ada0-a68fdfb54d0e"
-                            class="text-3xl font-bold text-white">Feb 18, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre
-                            </p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 18, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
+
                     </div>
                 </div>
             </li>
@@ -174,10 +173,8 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/802ac97a-89db-4792-b49f-fda20818c512"
-                            class="text-3xl font-bold text-white">Feb 19, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre
-                            </p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 19, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
                     </div>
                 </div>
             </li>
@@ -186,10 +183,8 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/bd4823d3-d485-43b6-a09a-e32c02aaf976"
-                            class="text-3xl font-bold text-white">Feb 21, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre
-                            </p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 21, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
                     </div>
                 </div>
             </li>
@@ -198,10 +193,8 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/bd4823d3-d485-43b6-a09a-e32c02aaf976"
-                            class="text-3xl font-bold text-white">Feb 22, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre
-                            </p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 22, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
                     </div>
                 </div>
             </li>
@@ -210,9 +203,8 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/8a9d0a5e-9e74-4a10-8881-caba62095a77"
-                            class="text-3xl font-bold text-white">Feb 24, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 24, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
                     </div>
                 </div>
             </li>
@@ -221,9 +213,8 @@
 
                     <div class="min-w-0 flex-auto">
                         <a target="_blank" href="https://go.seated.com/tour-events/b901dbdc-6cd2-41ab-a4fa-e203e1a68f3a"
-                            class="text-3xl font-bold text-white">Feb 25, 2025
-                            <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
-                        </a>
+                            class="text-3xl font-bold text-white">Feb 25, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
                     </div>
                 </div>
             </li>
@@ -237,7 +228,7 @@
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
-                    <a href="/index.html" class="flex items-center">
+                    <a href="https://flowbite.com/" class="flex items-center">
                         <img src="/src/assets/img/logoBarra.svg" class="h-8 me-3" alt="Billie Logo" />
                         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish
                             Vibes</span>
