--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </svg>
                 </a>
                 <a href="">
-                    <svg class="h-8 p-1 text-white hover:text-blue-500 duration-200" aria-hidden="true"
+                    <svg class="h-8 p-1   text-white hover:text-blue-500 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="shopping-cart" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
                         class="svg-inline--fa fa-shopping-cart fa-w-18 fa-7x">
@@ -143,7 +143,7 @@
                     </svg>
                 </a>
                 <a href="">
-                    <img class="h-9 p-1  hover:bg-blue-500 duration-200" aria-hidden="true"
+                    <img class="h-9 w-9 min-h-9 min-w-9 p-1 hover:bg-blue-500 duration-200" aria-hidden="true"
                         src="/src/assets/img/accountIcon.svg" alt="logo de cuenta">
                 </a>
 
@@ -438,7 +438,7 @@
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
-                    <a href="https://flowbite.com/" class="flex items-center">
+                    <a href="/index.html" class="flex items-center">
                         <img src="/src/assets/img/logoBarra.svg" class="h-8 me-3" alt="Billie Logo" />
                         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish
                             Vibes</span>
