barra desplegable de busqueda agregada y ventana flotante de inicio de Sesion tambien

--- a/src/pages/aboutHer.html
+++ b/src/pages/aboutHer.html
@@ -118,8 +118,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-3/12 flex justify-end">
-                <a href="">
+            <div class="w-3/12 flex justify-end md:w-3/12 md:justify-end xs:w-1/2 xs:justify-center ">
+                <button id="botonLupa">
                     <svg class="h-8 p-1 text-white hover:text-blue-700 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="search" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
@@ -128,9 +128,9 @@
                             d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                             class=""></path>
                     </svg>
-                </a>
+                </button>
                 <a href="">
-                    <svg class="h-8 p-1 text-white hover:text-blue-500 duration-200" aria-hidden="true"
+                    <svg class="h-8 p-1   text-white hover:text-blue-500 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="shopping-cart" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"
                         class="svg-inline--fa fa-shopping-cart fa-w-18 fa-7x">
@@ -139,16 +139,23 @@
                         </path>
                     </svg>
                 </a>
-                <a href="">
-                    <img class="h-9 w-9 min-h-9 min-w-9 p-1  hover:bg-blue-500 duration-200" aria-hidden="true"
+                <button id="botonSesion">
+                    <img class="h-9 w-9 min-h-9 min-w-9 p-1 hover:bg-blue-500 duration-200" aria-hidden="true"
                         src="/src/assets/img/accountIcon.svg" alt="logo de cuenta">
-                </a>
+                </button>
 
             </div>
         </div>
     </nav>
+    <!--barra de busqueda si activa el icono de lupa-->
+    <!--y ventana flotante de inicio de sesion si da click al icono de persona-->
+    <div id="contenedorVentanasDesplegables">
+    </div>
+
     <!--Contenido-->
-    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4">Billie Eilish Story </h2>
+    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4 xs:py-10">Billie Eilish
+        Story
+    </h2>
     <div class="max-w-screen-xl mx-auto p-4 py-6 lg:py-8">
         <!--quien es ella-->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 ">
@@ -366,6 +373,7 @@
             </div>
         </div>
     </footer>
+    <script src="/src/js/navBar.js"></script>
 </body>
 
 </html>
