--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="w-3/12 flex justify-end">
-                <a href="">
+            <div class="w-3/12 flex justify-end md:w-3/12 md:justify-end xs:w-1/2 xs:justify-center ">
+                <button id="botonLupa">
                     <svg class="h-8 p-1 text-white hover:text-blue-700 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="search" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
@@ -131,7 +131,7 @@
                             d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                             class=""></path>
                     </svg>
-                </a>
+                </button>
                 <a href="">
                     <svg class="h-8 p-1   text-white hover:text-blue-500 duration-200" aria-hidden="true"
                         focusable="false" data-prefix="far" data-icon="shopping-cart" role="img"
@@ -142,17 +142,23 @@
                         </path>
                     </svg>
                 </a>
-                <a href="">
+                <button id="botonSesion">
                     <img class="h-9 w-9 min-h-9 min-w-9 p-1 hover:bg-blue-500 duration-200" aria-hidden="true"
                         src="/src/assets/img/accountIcon.svg" alt="logo de cuenta">
-                </a>
+                </button>
 
             </div>
         </div>
     </nav>
+
+    <!--barra de busqueda si activa el icono de lupa-->
+    <!--y ventana flotante de inicio de sesion si da click al icono de persona-->
+    <div id="contenedorVentanasDesplegables">
+    </div>
+
     <!--Mensajito de Introduccion-->
     <div class="bg-transparent">
-        <div class="mx-auto max-w-7xl py-5 sm:px-6 sm:py-0 lg:px-8">
+        <div class="mx-auto max-w-7xl py-10 lg:py-10 xl:py-10 md:py-10 sm:px-6 sm:py-0 lg:px-8 ">
             <div
                 class="fondito relative isolate overflow-hidden  px-6 pt-16  sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
 
@@ -164,10 +170,10 @@
                         noticias, souvenirs, tours,historia y todo lo que te hace sentir más conectado con Billie.</p>
                     <p class="font-bold mt-6  text-lg/8 text-white">¿Listo para comenzar?</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
-                        <a href="#"
+                        <button id="botonInicioSesion"
                             class="rounded-md bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium text-sm px-3.5 py-2.5 text-gray-900 shadow-sm hover:bg-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
                             Sign In
-                        </a>
+                        </button>
                         <a href="/src/pages/aboutHer.html" class="text-sm/6 font-bold text-white">Explore Her Story
                             <span aria-hidden="true">→</span></a>
                     </div>
@@ -534,6 +540,7 @@
         </div>
     </footer>
 
+    <script src="/src/js/navBar.js"></script>
 </body>
 
 </html>
